# janus

./: .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  flake.nix  test_hook.cpp
.agent/rules/: janus-repo.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml  coverage.yml  docs.yml  format.yml
docs/: design_overview.md  janus_comprehensive_review.md  janus_usage_guide.md
docs/design_reviews/: janus_followup_review.md
docs/examples/: block_diag.html  graph_dynamics.html  graph_em_torque.html  graph_power.html  laplacian_2d.html
docs/implementation_plans/: coverage_improvement.md  deep_graph_implementation_plan.md  error_handling_enhancement.md  explicit_integration.md  extrapolation_modes.md  graph_visualization.md  implement_numerics.md  io_improvements.md  janus_repo_setup.md  moonshot_janus_todos.md  native_type_migration.md  phase3_aerosandbox_parity.md  phase4_beta_release.md  phase5_advanced_math.md  phase6_optimization.md  phase7_introspection.md  phase8_advanced_features.md  pseudospectral_transcription.md  refinement_audit.md  refinement_implementation.md  sparse_interpolation.md
docs/patterns/: branching_logic.md  hybrid_optimization.md  loop_patterns.md
docs/saved_work/: phase2_numerics.md  phase2_symbolic_completion.md  sciml_comparison_for_janus.md
docs/superpowers/specs/: 2026-03-17-docs-refinement-design.md
docs/user_guides/: birkhoff_pseudospectral.md  collocation.md  graph_visualization.md  integration.md  interpolation.md  math_functions.md  multiple_shooting.md  numeric_computing.md  optimization.md  polynomial_chaos.md  pseudospectral.md  root_finding.md  sparsity.md  stochastic_quadrature.md  structural_diagnostics.md  structural_transforms.md  symbolic_computing.md  transcription_methods.md
examples/: CMakeLists.txt  aircraft_attitudes.cpp  brachistochrone.cpp  drag_coefficient.cpp  energy_intro.cpp  graph_visualization.cpp  hybrid_sim.cpp  integration_demo.cpp  loop_patterns.cpp  numeric_intro.cpp
examples/interpolation/: nd_interpolation_demo.cpp  rootfinding_demo.cpp  scattered_interpolation_demo.cpp  table_from_file_demo.cpp
examples/intro/: energy_intro.cpp  print_example.cpp  sparsity_intro.cpp
examples/math/: branching_logic.cpp  deep_graph_demo.cpp  graph_visualization.cpp  linear_solve_policy_demo.cpp  polynomial_chaos_demo.cpp  sensitivity_jacobian_demo.cpp  sparse_derivative_pipeline.cpp  structural_diagnostics_demo.cpp  structural_transforms_demo.cpp
examples/optimization/: beam_deflection.cpp  brachistochrone_opti.cpp  collocation_demo.cpp  drag_optimization.cpp  multishoot_comparison.cpp  parametric_sweep.cpp  pseudospectral_demo.cpp  rosenbrock.cpp  transcription_comparison_demo.cpp
examples/simulation/: brachistochrone.cpp  drag_coefficient.cpp  smooth_trajectory.cpp
include/janus/: janus.hpp  using.hpp
include/janus/core/: Diagnostics.hpp  Function.hpp  JanusConcepts.hpp  JanusError.hpp  JanusIO.hpp  JanusTypes.hpp  Sparsity.hpp  StructuralTransforms.hpp
include/janus/linalg/: JanusMatrix.hpp
include/janus/math/: Arithmetic.hpp  AutoDiff.hpp  Calculus.hpp  DiffOps.hpp  FiniteDifference.hpp  Integrate.hpp  IntegrateDiscrete.hpp  IntegratorStep.hpp  Interpolate.hpp  JanusMath.hpp  Linalg.hpp  Logic.hpp  OrthogonalPolynomials.hpp  PolynomialChaos.hpp  Quadrature.hpp  Quaternion.hpp  RootFinding.hpp  Rotations.hpp  ScatteredInterpolator.hpp  Spacing.hpp  SurrogateModel.hpp  Trig.hpp
include/janus/optimization/: BirkhoffPseudospectral.hpp  Collocation.hpp  MultiShooting.hpp  Opti.hpp  OptiCache.hpp  OptiOptions.hpp  OptiSol.hpp  OptiSweep.hpp  Pseudospectral.hpp  Scaling.hpp  TranscriptionBase.hpp
include/janus/utils/: DiffTestHarness.hpp  GTestDiffTest.hpp  JsonUtils.hpp
scripts/: build.sh  ci.sh  clean.sh  coverage.sh  dev.sh  examples.sh  generate_docs.sh  install-hooks.sh  run_example.sh  run_examples.sh  test.sh  verify.sh
tests/: CMakeLists.txt  test_core.cpp  test_math.cpp
tests/core/: test_diagnostics.cpp  test_function.cpp  test_io_coverage.cpp  test_janus_io.cpp  test_janus_types.cpp  test_sparsity.cpp  test_structural_transforms.cpp
tests/math/: test_arithmetic.cpp  test_arithmetic_diff.cpp  test_autodiff.cpp  test_calculus.cpp  test_calculus_diff.cpp  test_coverage_gaps.cpp  test_diffops.cpp  test_finite_diff.cpp  test_geometry.cpp  test_integrate.cpp  test_integrate_diff.cpp  test_integrate_discrete.cpp  test_integrator_step.cpp  test_interpolate.cpp  test_interpolate_diff.cpp  test_linalg.cpp  test_linalg_diff.cpp  test_logic.cpp  test_logic_diff.cpp  test_orthogonal_polynomials.cpp  test_polynomial_chaos.cpp  test_quadrature.cpp  test_quaternion.cpp  test_rootfinding.cpp  test_rotations.cpp  test_scattered_interpolator.cpp  test_spacing.cpp  test_surrogate.cpp  test_surrogate_diff.cpp  test_trig.cpp  test_trig_diff.cpp
tests/optimization/: test_birkhoff_pseudospectral.cpp  test_collocation.cpp  test_multishoot.cpp  test_opti.cpp  test_opti_cache.cpp  test_opti_solvers.cpp  test_pseudospectral.cpp
tests/utils/: TestUtils.hpp
